clusters/home/apps/homeassistant/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "home-assistant.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-internal.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`home-assistant.layertwo.dev`)
    kind: Rule
    services:
    - name: home-assistant
      port: 8123
